--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.6",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query-devtools": "^5.62.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "styled-components": "^6.1.13"
   },
